chapter_1/answers/exer_1.1/second
bash-3.2$ python second.py
  File "second.py", line 1
    print("what is the error?)
                             ^
SyntaxError: EOL while scanning string literal
bash-3.2$ 
